--- a/data/canon/.gitattributes
+++ b/data/canon/.gitattributes
@@ -1,1 +1,7 @@
 edgelist-canon-pce0.txt filter=lfs diff=lfs merge=lfs -text
+edgelist-canon-pce0.txt.bz2 filter=lfs diff=lfs merge=lfs -text
+edgelist-canon-pce.txt.bz2 filter=lfs diff=lfs merge=lfs -text
+matrix-canon-pce0.dat.bz2 filter=lfs diff=lfs merge=lfs -text
+matrix-canon-pce0.txt.bz2 filter=lfs diff=lfs merge=lfs -text
+matrix-canon-pce.dat.bz2 filter=lfs diff=lfs merge=lfs -text
+matrix-canon-pce.txt.bz2 filter=lfs diff=lfs merge=lfs -text
