--- a/data/canon/.gitattributes
+++ b/data/canon/.gitattributes
@@ -5,3 +5,6 @@ matrix-canon-pce0.dat.bz2 filter=lfs diff=lfs merge=lfs -text
 matrix-canon-pce0.txt.bz2 filter=lfs diff=lfs merge=lfs -text
 matrix-canon-pce.dat.bz2 filter=lfs diff=lfs merge=lfs -text
 matrix-canon-pce.txt.bz2 filter=lfs diff=lfs merge=lfs -text
+edgelist-canon-ncc.txt.bz2 filter=lfs diff=lfs merge=lfs -text
+matrix-canon-ncc.dat.bz2 filter=lfs diff=lfs merge=lfs -text
+matrix-canon-ncc.txt.bz2 filter=lfs diff=lfs merge=lfs -text
